--- a/index.html
+++ b/index.html
@@ -161,17 +161,15 @@
     </button>
   </div>
      <!-- ///////////////////////// -->
-     <section id="welcome" class="rounded-2 pb-5 border-start border-bottom border-2  ">
-      <div class="container-fluid ">
-          <div class=" px-3 welcome rounded-3 shadow-lg py-5 border-start border-bottom border-2">    
+     <section id="welcome" class=" pb-5  border-bottom border-2  ">
+      <div class="container-fluid px-3 welcome rounded-3 shadow-lg py-5">    
                   <h4 class="display-5 fw-medium">Welcome to Our Clinic</h4>
                   <p class="fs-4 mt-3 h4">Experience quality care with a personalized approach tailored to your needs.</p>
                   <a href="#learn-more" class="btn  fs-4 mt-4">Learn More</a>
-          </div>
       </div>
   </section>
   <!-- ///////////////// -->
-  <section class="border-2 border-start border-bottom py-5  rounded-2 ">
+  <section class="border-2  border-bottom py-5  ">
     <h2 class="container-fluid text-center  rounded-4   fw-bold display-5 p-5"> Eye Care Services</h2>
     <div class="accordion  border-2" id="accordionExample">
       <div class="accordion-item  mt-3">
@@ -210,14 +208,14 @@
     </div>  
     </section>
 <!-- //////////////// -->
- <section class="write border-2 border-start border-bottom py-5  rounded-2 ">
+ <section class="write border-2  border-bottom py-5   ">
   <h2 class=" rounded-4 p-5  fw-bold  text-center text-capitalize display-5">appointment booking</h2>
-<div class="container-fluid p-5 border-start border-bottom border-3 rounded-3">
-<p>  <span class=" text-dark fs-3">Write a convenient appointement</span>
+<div class="container-fluid mt-3  ">
+<p>  <span class=" text-dark fs-3">Write an appointement</span>
 <a class="text-decoration-none fs-3 text-capitalize text-secondary ms-1" href="#"> press here</a></p>
 <span data-bs-toggle="tooltip" title="Send a request!" data-bs-placement="right" data-bs-trigger="hover" data-bs-offset="5,10">
 <span data-bs-toggle="popover"  data-bs-content="sent!" data-bs-placement="right" data-bs-trigger="focus" data-bs-offset="5,10">
-  <button type="button" class="btn fs-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">
+  <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">
     Send Request
   </button>
 </span>
@@ -238,18 +236,18 @@
     </div>
   </div>
 </div>
-<textarea class="container-fluid  form-control  fs-4 rounded-3 ps-4" rows="3" placeholder="write an appointment" id="comment" name="text"></textarea>
+<textarea class="container-fluid  form-control shadow-lg fs-4 rounded-3 ps-4" rows="5" placeholder="write an appointment" id="comment" name="text"></textarea>
 </div>
  </section>
  <!-- /////////////////////////// -->
- <section class="write border-2 border-start border-bottom py-5  rounded-2 ">
+ <section class="write border-2  border-bottom py-5  ">
   <h2 class=" rounded-4 p-5  fw-bold  text-center text-capitalize display-5">inquiries about examination</h2>
-<div class="container-fluid p-5 border-start border-bottom border-3 rounded-3">
+<div class="container-fluid mt-3 ">
 <p>  <span class=" text-dark fs-3">Write your inquiry</span>
 <a class="text-decoration-none fs-3 text-capitalize text-secondary" href="#"> press here</a></p>
 <span data-bs-toggle="tooltip" title="Send a request!" data-bs-placement="right" data-bs-trigger="hover" data-bs-offset="5,10">
   <span data-bs-toggle="popover"  data-bs-content="sent!" data-bs-placement="right" data-bs-trigger="focus" data-bs-offset="5,10">
-    <button type="button" class="btn fs-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">
+    <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">
       Submit inquiry
     </button>
   </span>
@@ -270,18 +268,18 @@
     </div>
   </div>
 </div>
-<textarea class="container-fluid  form-control  fs-4 rounded-3 ps-4" rows="3" placeholder="Write your inquiry" id="comment" name="text"></textarea>
+<textarea class="container-fluid  form-control  fs-4 shadow-lg rounded-3 ps-4" rows="5" placeholder="Write your inquiry" id="comment" name="text"></textarea>
 </div>
  </section>
 <!-- ///////////////////////// -->
-<section class="write border-2 border-start border-bottom py-5  rounded-2">
+<section class="write border-2  border-bottom py-5 ">
   <h2 class=" rounded-4 p-5  fw-bold  text-center text-capitalize display-4">patient reviews</h2>
-<div class="container-fluid p-5 border-start border-bottom border-3 rounded-3">
-<p>  <span class=" text-dark fs-3">Share your experience with us </span>
+<div class="container-fluid mt-3">
+<p>  <span class=" text-dark fs-3">Share your experience </span>
 <a class="text-decoration-none fs-3 text-capitalize text-secondary" href="#"> press here</a></p>
 <span class="fs-4" data-bs-toggle="tooltip" title="Send a request!" data-bs-placement="right" data-bs-trigger="hover" data-bs-offset="5,10">
   <span data-bs-toggle="popover"  data-bs-content="sent!" data-bs-placement="right" data-bs-trigger="focus" data-bs-offset="5,10">
-    <button type="button" class="btn fs-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">
+    <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">
       submit review
     </button>
   </span>
@@ -302,7 +300,7 @@
     </div>
   </div>
 </div>
-<textarea class="container-fluid  form-control  fs-4 rounded-3 ps-4" rows="3" placeholder="Share your experience" id="comment" name="text"></textarea>
+<textarea class="container-fluid shadow-lg  form-control  fs-4 rounded-3 ps-4" rows="5" placeholder="Share your experience" id="comment" name="text"></textarea>
 </div>
  </section>
 <!-- /////////////////////////// -->
@@ -522,11 +520,11 @@
 </div> <!-- /container -->
 </section>
 <!-- ///////////////////////////////// -->
- <section class="join py-5">
+ <section class="join pb-5">
   <h2 class="  mb-5  fw-bold bg-white text-center text-uppercase display-5">clinic network </h2> 
 <div class="container">
   <div class=" row  d-flex flex-lg-row justify-content-lg-between flex-column align-items-center">
-    <div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2 col-7  col-md-3 p-4 text-center shadow-lg">
+    <div style="height: 220px;" class=" updatecar rounded-4 col-lg-2 col-7  col-md-3 p-4 text-center shadow-lg">
         <h5 class="text-capitalize fs-3  mb-3 fw-bold">connect</h5>
         <i class="fa-brands fa-whatsapp btn   rounded-3  border-0 mb-3 fs-1 p-3 j-icon"></i>
        <a href="#" class="text-decoration-none"><p class="fs-4 fw-medium">Quik Help</p></a>
@@ -550,7 +548,7 @@
 </div><!-- /container -->
  </section>
  <!-- //////////////////// -->
- <footer class="container-fluid py-5 border-top border-2  ">
+ <footer class="container-fluid pb-5   ">
   <div class="row w-100 d-flex flex-lg-row justify-content-lg-between flex-column align-items-stretch">
     <div class="col-lg-4">
       <div class="head border-top border-bottom border-2 py-4 d-flex align-items-center justify-content-center">
