--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   </div>
      <!-- ///////////////////////// -->
      <section id="welcome" class=" pb-5  border-bottom border-2  ">
-      <div class="container-fluid px-3 welcome rounded-3 shadow-lg py-5">    
+      <div class="container-fluid px-3 welcome rounded-3 shadow py-5">    
                   <h4 class="display-5 fw-medium">Welcome to Our Clinic</h4>
                   <p class="fs-4 mt-3 h4">Experience quality care with a personalized approach tailored to your needs.</p>
                   <a href="#learn-more" class="btn  fs-4 mt-4">Learn More</a>
@@ -236,7 +236,7 @@
     </div>
   </div>
 </div>
-<textarea class="container-fluid  form-control shadow-lg fs-4 rounded-3 ps-4" rows="5" placeholder="write an appointment" id="comment" name="text"></textarea>
+<textarea class="container-fluid  form-control shadow fs-4 rounded-3 ps-4" rows="5" placeholder="write an appointment" id="comment" name="text"></textarea>
 </div>
  </section>
  <!-- /////////////////////////// -->
@@ -268,7 +268,7 @@
     </div>
   </div>
 </div>
-<textarea class="container-fluid  form-control  fs-4 shadow-lg rounded-3 ps-4" rows="5" placeholder="Write your inquiry" id="comment" name="text"></textarea>
+<textarea class="container-fluid  form-control  fs-4 shadow rounded-3 ps-4" rows="5" placeholder="Write your inquiry" id="comment" name="text"></textarea>
 </div>
  </section>
 <!-- ///////////////////////// -->
@@ -300,7 +300,7 @@
     </div>
   </div>
 </div>
-<textarea class="container-fluid shadow-lg  form-control  fs-4 rounded-3 ps-4" rows="5" placeholder="Share your experience" id="comment" name="text"></textarea>
+<textarea class="container-fluid shadow  form-control  fs-4 rounded-3 ps-4" rows="5" placeholder="Share your experience" id="comment" name="text"></textarea>
 </div>
  </section>
 <!-- /////////////////////////// -->
@@ -312,7 +312,7 @@
     <h2 class="rounded-1 p-5  fw-bold  text-center text-capitalize display-5">popular eye treatments</h2>
   <div class="allcards container mt-5">
     <div class="row  d-flex flex-lg-row justify-content-lg-between flex-column align-items-center">
-      <div class="col-lg-3 col-md-5   card shadow-lg rounded-md-3 pop-card" >
+      <div class="col-lg-3 col-md-5   card shadow rounded-md-3 pop-card" >
         <img class="card-img-top" style="height: 400px;"  src="Images/lasik.jpg" alt="lasik">
         <div class="card-body d-flex justify-content-between align-items-start">
           <div>
@@ -322,7 +322,7 @@
            <a href="#" class="btn ">Learn More</a>
         </div><!-- /card-body -->
       </div><!-- /col -->
-      <div class="col-lg-3 col-md-5  mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+      <div class="col-lg-3 col-md-5  mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
         <img class="card-img-top" style="height: 400px;" src="Images/cataract.jpg" alt="lasik">
         <div class="card-body d-flex justify-content-between align-items-start">
          <div>
@@ -332,7 +332,7 @@
            <a href="#" class="btn ">Learn More</a>
         </div><!-- /card-body -->
       </div><!-- /col -->
-      <div class="col-lg-3 col-md-5   mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+      <div class="col-lg-3 col-md-5   mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
         <img class="card-img-top" style="height: 400px;" src="Images/gluc.jpg" alt="lasik">
         <div class="card-body d-flex justify-content-between align-items-start">
           <div>
@@ -344,7 +344,7 @@
       </div><!-- /col -->
    </div><!-- /row -->
     <div class="row mt-lg-5  d-flex flex-lg-row justify-content-lg-between flex-column align-items-center">
-    <div class="col-lg-3 col-md-5   mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+    <div class="col-lg-3 col-md-5   mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
       <img class="card-img-top"  src="Images/ped.jpg" style="height: 400px;" alt="pediatric">
       <div class="card-body d-flex justify-content-between align-items-start">
         <div>
@@ -354,7 +354,7 @@
          <a href="#" class="btn ">Learn More</a>
       </div><!-- /card-body -->
     </div><!-- /col -->
-    <div class="col-lg-3  col-md-5  mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+    <div class="col-lg-3  col-md-5  mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
       <img class="card-img-top" style="height: 400px;" src="Images/dry.jpg" alt="lasik">
       <div class="card-body d-flex justify-content-between align-items-start">
        <div>
@@ -364,7 +364,7 @@
          <a href="#" class="btn ">Learn More</a>
       </div><!-- /card-body -->
     </div><!-- /col -->
-    <div class="col-lg-3 col-md-5  mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+    <div class="col-lg-3 col-md-5  mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
       <img class="card-img-top" style="height: 400px;" src="Images/man.jpg" alt="lasik">
       <div class="card-body d-flex justify-content-between align-items-start">
         <div>
@@ -376,7 +376,7 @@
     </div><!-- /col -->
  </div><!-- /row -->
  <div class="row mt-lg-5  d-flex justify-content-lg-around flex-lg-row  flex-column align-items-center">
-  <div class="col-lg-3  col-md-5  mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+  <div class="col-lg-3  col-md-5  mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
     <img class="card-img-top" style="height: 400px;" src="Images/lens.jpg" alt="lasik">
     <div class="card-body d-flex justify-content-between align-items-start">
       <div>
@@ -386,7 +386,7 @@
        <a href="#" class="btn ">Learn More</a>
     </div><!-- /card-body -->
   </div><!-- /col -->
-  <div class="col-lg-3 col-md-5   mt-lg-0 mt-5 card shadow-lg rounded-md-3 pop-card" >
+  <div class="col-lg-3 col-md-5   mt-lg-0 mt-5 card shadow rounded-md-3 pop-card" >
     <img class="card-img-top" style="height: 400px;" src="Images/retina.jpg" alt="lasik">
     <div class="card-body d-flex justify-content-between align-items-start">
      <div>
@@ -457,7 +457,7 @@
  <section class="updates py-5">
   <h2 class="  mb-5  fw-bold bg-white  text-center text-uppercase display-5">insightful episodes </h2>
   <div class=" d-flex flex-column justify-content-center align-items-center">
-  <div class=" col-md-10 updatecard border border-2  shadow-lg rounded-4  d-flex flex-lg-row justify-content-lg-between flex-column-reverse">
+  <div class=" col-md-10 updatecard border border-2  shadow rounded-4  d-flex flex-lg-row justify-content-lg-between flex-column-reverse">
     <div class="p-lg-5  p-3">
       <h3 class="fw-medium display-6  text-capitalize">understanding cataracts</h3>
       <i class="fa-solid fa-calendar-days"></i>
@@ -472,7 +472,7 @@
     </div><!-- /text -->
     <img  class="u-img rounded-end-4 " src="Images/sqcat.jpg" alt="cataract">
   </div><!-- /card -->
-  <div class="updatecard col-md-10 mt-5 shadow-lg border border-2  rounded-4  d-flex flex-lg-row flex-lg-row-reverse justify-content-lg-between flex-column-reverse">
+  <div class="updatecard col-md-10 mt-5 shadow border border-2  rounded-4  d-flex flex-lg-row flex-lg-row-reverse justify-content-lg-between flex-column-reverse">
     <div class=" p-lg-5 p-3 w-lg-75">
       <h3 class="fw-medium display-6 text-capitalize">Digital Eye Strain</h3>
       <i class="fa-solid fa-calendar-days"></i>
@@ -487,7 +487,7 @@
     </div><!-- /text -->
     <img  class="u-img2 rounded-start-4 " src="Images/strain.jpg" alt="image">
   </div><!-- /card -->
-  <div class="updatecard  col-md-10 shadow-lg rounded-4 mt-5 border border-2  d-flex flex-lg-row justify-content-lg-between flex-column-reverse">
+  <div class="updatecard  col-md-10 shadow rounded-4 mt-5 border border-2  d-flex flex-lg-row justify-content-lg-between flex-column-reverse">
     <div class="p-lg-5 p-3 ">
       <h3 class="fw-medium display-6 text-capitalize">Early Detectng Glaucoma</h3>
       <i class="fa-solid fa-calendar-days"></i>
@@ -502,7 +502,7 @@
     </div><!-- /text -->
     <img  class="u-img rounded-end-4 " src="Images/sqglu.jpg" alt="image">
   </div><!-- /card -->
-  <div class="updatecard col-md-10 mt-5 border border-2   shadow-lg rounded-4  d-flex flex-lg-row flex-lg-row-reverse justify-content-lg-between flex-column-reverse">
+  <div class="updatecard col-md-10 mt-5 border border-2   shadow rounded-4  d-flex flex-lg-row flex-lg-row-reverse justify-content-lg-between flex-column-reverse">
     <div class="p-lg-5 p-3 ">
       <h3 class="fw-medium display-6 text-capitalize">Eye Health for Children</h3>
       <i class="fa-solid fa-calendar-days"></i>
@@ -523,23 +523,23 @@
  <section class="join pb-5">
   <h2 class="  mb-5  fw-bold bg-white text-center text-uppercase display-5">clinic network </h2> 
 <div class="container">
-  <div class=" row  d-flex flex-lg-row justify-content-lg-between flex-column align-items-center">
-    <div style="height: 220px;" class=" updatecar rounded-4 col-lg-2 col-7  col-md-3 p-4 text-center shadow-lg">
+  <div class=" row  d-flex flex-lg-row justify-content-lg-around flex-column align-items-center">
+    <div style="height: 220px;" class=" updatecar rounded-4 col-lg-2 col-7  col-md-3 p-4 text-center shadow">
         <h5 class="text-capitalize fs-3  mb-3 fw-bold">connect</h5>
         <i class="fa-brands fa-whatsapp btn   rounded-3  border-0 mb-3 fs-1 p-3 j-icon"></i>
        <a href="#" class="text-decoration-none"><p class="fs-4 fw-medium">Quik Help</p></a>
     </div><!-- /card -->
-    <div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2 col-7 col-md-3 p-4 text-center shadow-lg">
+    <div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2 col-7 col-md-3 p-4 text-center shadow">
       <h5 class="text-capitalize fs-3  mb-3 fw-bold">inspire</h5>
       <i class="fa-brands fa-instagram btn   rounded-3  border-0 mb-3  fs-1 p-3 j-icon"></i>
       <a href="#" class="text-decoration-none"><p class="fs-4 fw-medium">Eye Care</p></a>
   </div><!-- /card -->
-  <div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2  col-7 col-md-3 p-4 text-center shadow-lg">
+  <div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2  col-7 col-md-3 p-4 text-center shadow">
     <h5 class="text-capitalize fs-3  mb-3 fw-bold">follow</h5>
     <i class="fa-brands fa-twitter btn   rounded-3  border-0 mb-3 fs-1 p-3 j-icon"></i>
     <a href="#" class="text-decoration-none"><p class="fs-4 fw-medium">Latest News</p></a>
 </div><!-- /card -->
-<div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2 col-7 col-md-3 p-4 text-center shadow-lg">
+<div style="height: 220px;" class="mt-5 mt-lg-0 updatecar rounded-4 col-lg-2 col-7 col-md-3 p-4 text-center shadow">
   <h5 class="text-capitalize fs-3  mb-3 fw-bold">network</h5>
   <i class="fa-brands fa-linkedin-in btn   rounded-3  border-0 mb-3 fs-1 p-3 j-icon"></i>
  <a href="#" class="text-decoration-none"><p class="fs-4 fw-medium">Trusted Info</p></a> 
@@ -548,7 +548,7 @@
 </div><!-- /container -->
  </section>
  <!-- //////////////////// -->
- <footer class="container-fluid pb-5   ">
+ <footer class="container-fluid py-5  bg-light ">
   <div class="row w-100 d-flex flex-lg-row justify-content-lg-between flex-column align-items-stretch">
     <div class="col-lg-4">
       <div class="head border-top border-bottom border-2 py-4 d-flex align-items-center justify-content-center">
