--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 <div class="logmodal modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header mb-4">
+            <div class="modal-header  ">
                 <h5 class="modal-title fs-3" id="loginModalLabel">Login</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body p-4">
+            <div class="modal-body ">
                 <form>
                     <div class="mb-4">
                         <label for="email" class="form-label fs-5">Email Address</label>
@@ -220,19 +220,14 @@
   </button>
 </span>
 </span>
-<div class="modal fade" id="myModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
+<div class="modal  fade" id="myModal">
+  <div class="modal-dialog   aler-d">
+    <div class="modal-content aler-c">
+      <div class="modal-body alert-s">
         <h4 class="modal-title">Send Successfully</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body fs-4 text-capitalize">
-        your request has been sent successfully
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn  fs-3" data-bs-dismiss="modal">ok</button>
-      </div>
+      <p class="fs-5 text-lg-end text-lg-black mt-lg-0 mt-2">تم ارسال طلبك بنجاح</p>  
+      <button type="button" class="btn d-block ms-auto fs-3 px-3 py-2" data-bs-dismiss="modal">ok</button>  
+    </div>
     </div>
   </div>
 </div>
@@ -247,24 +242,19 @@
 <a class="text-decoration-none fs-3 text-capitalize text-secondary" href="#"> press here</a></p>
 <span data-bs-toggle="tooltip" title="Send a request!" data-bs-placement="right" data-bs-trigger="hover" data-bs-offset="5,10">
   <span data-bs-toggle="popover"  data-bs-content="sent!" data-bs-placement="right" data-bs-trigger="focus" data-bs-offset="5,10">
-    <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">
+    <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal1">
       Submit inquiry
     </button>
   </span>
   </span>
 <div class="modal fade" id="myModal1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
+  <div class="modal-dialog aler-d">
+    <div class="modal-content aler-c">
+      <div class="modal-body alert-s">
         <h4 class="modal-title">Submitted Successfully</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body fs-5 text-capitalize">
-        your inquiry has been submitted successfully
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn  fs-3" data-bs-dismiss="modal">ok</button>
-      </div>
+      <p class="fs-5 text-lg-end text-lg-black mt-lg-0 mt-2 ">تم إرسال استفسارك بنجاح.</p>
+      <button type="button" class="btn  fs-3 d-block ms-auto px-3 py-2" data-bs-dismiss="modal">ok</button>  
+    </div>
     </div>
   </div>
 </div>
@@ -277,25 +267,20 @@
 <div class="container-fluid mt-3">
 <p>  <span class=" text-dark fs-3">Share your experience </span>
 <a class="text-decoration-none fs-3 text-capitalize text-secondary" href="#"> press here</a></p>
-<span class="fs-4" data-bs-toggle="tooltip" title="Send a request!" data-bs-placement="right" data-bs-trigger="hover" data-bs-offset="5,10">
-  <span data-bs-toggle="popover"  data-bs-content="sent!" data-bs-placement="right" data-bs-trigger="focus" data-bs-offset="5,10">
-    <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">
+<span class="fs-4 z-0" data-bs-toggle="tooltip" title="Send a request!" data-bs-placement="right" data-bs-trigger="hover" data-bs-offset="5,10">
+  <span data-bs-toggle="popover"  data-bs-content="sent!" data-bs-placement="right"  data-bs-trigger="focus" data-bs-offset="5,10">
+    <button type="button" class="btn fs-4 mb-3" data-bs-toggle="modal" data-bs-target="#myModal2">
       submit review
     </button>
   </span>
   </span>
-<div class="modal fade" id="myModal2">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
+<div class="modal allmodal fade" id="myModal2">
+  <div class="modal-dialog aler-d">
+    <div class="modal-content aler-c">
+      <div class=" modal-body alert-s">
         <h4 class="modal-title">submitted Successfully</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body fs-5 text-capitalize">
-        your review has been submitted successfully
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn  fs-3" data-bs-dismiss="modal">ok</button>
+       <p class="fs-5 text-lg-end text-lg-black mt-lg-0 mt-2"> تم إرسال تقييمك بنجاح.</p>
+       <button type="button" class="btn d-block ms-auto  fs-3 px-3 py-2" data-bs-dismiss="modal">ok</button>
       </div>
     </div>
   </div>
